display users on screen code

--- a/TMindex.html
+++ b/TMindex.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>JS For Beginners</h1>
+      <h1>Booking Appointment</h1>
     </header>
 
     <section class="container">
@@ -24,16 +24,15 @@
           <label for="email">Email:</label>
           <input type="text" id="email">
         </div>
+        <div>
+          <label for="number">Phone Number:</label>
+          <input type="text" id="number">
+        </div>
         <input class="btn" type="submit" value="Submit">
       </form>
 
-      <ul id="users"></ul>
-
-      <!--<ul class="items">
-        <li class="item">Item 1</li>
-        <li class="item">Item 2</li>
-        <li class="item">Item 3</li>
-      </ul>-->
+      <ul id="users" class="list-group"></ul>
+      
     </section>
     
 
