added delete functionality from UI and localstorage

--- a/TMindex.html
+++ b/TMindex.html
@@ -18,15 +18,15 @@
         <div class="msg"></div>
         <div>
           <label for="name">Name:</label>
-          <input type="text" id="name">
+          <input type="text" id="name" name="name">
         </div>
         <div>
           <label for="email">Email:</label>
-          <input type="text" id="email">
+          <input type="text" id="email" name="email">
         </div>
         <div>
           <label for="number">Phone Number:</label>
-          <input type="text" id="number">
+          <input type="text" id="number" name="number">
         </div>
         <input class="btn" type="submit" value="Submit">
       </form>
